--- a/productspage/style.css
+++ b/productspage/style.css
@@ -240,8 +240,48 @@ body{
     background-size: cover;
 }
 
+.searchsectionwrapper{
+    display:flex;
+    flex-direction: column;
+    width:100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.searchsection{
+    width:500px;
+    height:600px;
+    background: rgba(220, 220, 220, 0.5);
+    backdrop-filter: blur(5px);
+    border-radius:40px;
+    padding: 0 10px;
+    box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.06);
+    padding:25px;
 
 
 
+}
+
+.searchsection img{
+    width:40px;
+    height:40px;
+}
+.searchsection form{
+    width:100%;
+    border-radius: 8px;
+}
+
+.searchsection input{
+    width:380px;
+    height:40px;
+    background: rgba(220, 220, 220, 0.5);
+    backdrop-filter: blur(5px);
+    border:none;
+    border-radius:8px;
+}
+
+.searchsection input::placeholder{
+    color: white;
+}
 
 
