--- a/contactuspage/style.css
+++ b/contactuspage/style.css
@@ -121,6 +121,7 @@ body {
 }
 #search button {
   border-radius: 50px;
+  width: auto;
   color: white;
   border: 1px solid #212f3d;
   background-color: #212f3d;
