--- a/aboutuspage/aboutus.css
+++ b/aboutuspage/aboutus.css
@@ -1,135 +1,145 @@
 * {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   outline: none;
-   font-family: "Merriweather", serif;
- }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  font-family: "Merriweather", serif;
+}
 
- html, body{
+html,
+body {
   height: 100%;
   margin: 0;
   display: flex;
   flex-direction: column;
- }
+}
 
- /* top navbar */
- .top-navbar {
-   display: flex;
-   justify-content: space-between;
- }
- .top-navbar p {
-   margin-top: 13px;
-   margin-left: 15px;
- }
- .top-navbar .icons {
-   margin-top: 13px;
-   margin-right: 15px;
- }
- .top-navbar a {
-   text-decoration: none;
-   color: black;
-   margin-left: 10px;
- }
- .top-navbar a img {
-   margin-bottom: 3px;
- }
- .top-navbar a:hover {
-   color: black;
- }
- @media screen and (max-width: 400px) {
-   .top-navbar a {
-     font-size: 13px;
-   }
-   .top-navbar a img {
-     width: 15px;
-   }
-   .top-navbar p {
-     font-size: 13px;
-   }
- }
- @media screen and (max-width: 320px) {
-   .top-navbar a {
-     font-size: 10px;
-   }
-   .top-navbar a img {
-     width: 13px;
-   }
-   .top-navbar p {
-     font-size: 10px;
-   }
- }
- @media screen and (max-width: 318px) {
-   .top-navbar a {
-     font-size: 8px;
-     margin-left: 0;
-   }
-   .top-navbar a img {
-     width: 10px;
-     margin-left: 0;
-   }
-   .top-navbar p {
-     font-size: 10px;
-     margin-top: 20px;
-   }
- }
- /* top navbar */
- 
- /* navbar */
- #navbar {
-   background-color: #e5e7e9;
- }
- #logo {
-   margin-left: 15px;
-   color: #212f3d;
-   font-size: 25px;
-   font-weight: bold;
-   margin-bottom: 6px;
- }
- #logo span {
-   color: #212f3d;
- }
- #logo #span1 {
-   font-size: 30px;
- }
- .logo-img {
-   height: 50px;
-   margin-right: 10px;
- }
- .navbar-nav {
-   margin-left: 20px;
- }
- .nav-item {
-   margin-left: 10px;
- }
- .nav-item .nav-link {
-   color: #212f3d;
-   margin-left: 2px;
-   text-shadow: 0px 0px 1px black;
-   transition: 0.5s ease;
- }
- .nav-item .nav-link:hover {
-   color: #212f3d;
- }
- .dropdown-menu li a {
-   color: white;
-   transition: 0.5s ease;
- }
- .dropdown-menu li a:hover {
-   background-color: #e5e7e9;
-   color: #e5e7e9;
- }
- #search input {
-   border-radius: 50px;
-   border: none;
- }
- #search button {
-   border-radius: 50px;
-   color: white;
-   border: 1px solid #212f3d;
-   background-color: #212f3d;
- }
- /* navbar */
+/* top navbar */
+.top-navbar {
+  display: flex;
+  justify-content: space-between;
+}
+.top-navbar p {
+  margin-top: 13px;
+  margin-left: 15px;
+}
+.top-navbar .icons {
+  margin-top: 13px;
+  margin-right: 15px;
+}
+.top-navbar a {
+  text-decoration: none;
+  color: black;
+  margin-left: 10px;
+}
+.top-navbar a img {
+  margin-bottom: 3px;
+}
+.top-navbar a:hover {
+  color: black;
+}
+@media screen and (max-width: 400px) {
+  .top-navbar a {
+    font-size: 13px;
+  }
+  .top-navbar a img {
+    width: 15px;
+  }
+  .top-navbar p {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .top-navbar a {
+    font-size: 10px;
+  }
+  .top-navbar a img {
+    width: 13px;
+  }
+  .top-navbar p {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 318px) {
+  .top-navbar a {
+    font-size: 8px;
+    margin-left: 0;
+  }
+  .top-navbar a img {
+    width: 10px;
+    margin-left: 0;
+  }
+  .top-navbar p {
+    font-size: 10px;
+    margin-top: 20px;
+  }
+}
+/* top navbar */
+
+/* navbar */
+#navbar {
+  background-color: #e5e7e9;
+}
+#logo {
+  margin-left: 15px;
+  color: #212f3d;
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+#logo span {
+  color: #212f3d;
+}
+#logo #span1 {
+  font-size: 30px;
+}
+.logo-img {
+  height: 50px;
+  margin-right: 10px;
+}
+.navbar-nav {
+  margin-left: 20px;
+}
+.nav-item {
+  margin-left: 10px;
+}
+.nav-item .nav-link {
+  color: #212f3d;
+  margin-left: 2px;
+  text-shadow: 0px 0px 1px black;
+  transition: 0.5s ease;
+}
+.nav-item .nav-link:hover {
+  color: #212f3d;
+}
+.dropdown-menu li a {
+  color: white;
+  transition: 0.5s ease;
+}
+.dropdown-menu li a:hover {
+  background-color: #e5e7e9;
+  color: #e5e7e9;
+}
+#search input {
+  border-radius: 50px;
+  border: none;
+}
+#search button {
+  border-radius: 50px;
+  color: white;
+  border: 1px solid #212f3d;
+  background-color: #212f3d;
+}
+.cart-btn a i {
+  padding-left: 10px;
+  font-size: 20px;
+  color: #212f3d;
+  transition: color 0.3s ease;
+}
+.cart-btn a i:hover {
+  color: gray;
+}
+/* navbar */
 
 /* footer */
 #footer {
@@ -272,20 +282,18 @@ html {
   color: #333;
 }
 
- 
- #about button{
-    width: 150px;
-    height: 36px;
-    color: white;
-    background-color: rgb(67 0 86);
-    border-radius: 5px;
-    cursor: pointer;
- }
- 
+#about button {
+  width: 150px;
+  height: 36px;
+  color: white;
+  background-color: rgb(67 0 86);
+  border-radius: 5px;
+  cursor: pointer;
+}
 
 /*about hero*/
 
- #hero {
+#hero {
   flex-shrink: 0;
   margin-bottom: 20px;
   position: relative;
@@ -308,45 +316,42 @@ html {
 
 /*about hero*/
 
-
 /*New Improved Slider*/
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-   
 }
 
 .wrapper {
-  flex-grow: 1; 
-  display: flex; 
-  flex-direction: column; 
-  justify-content: center;
-  align-items: center; 
-  background-color: white; 
-  position: relative; 
-  width: 90vw; 
-  max-width: 1000px; 
-  min-height: 25em; 
-  border-radius: 0.6em; 
-  margin: 0 auto 50px auto; 
-  box-shadow: 0 1.8em 3em rgba(1, 17, 39, 0.15);
-  padding: 20px; 
-}
-
-
-.info-slider {
-  color: black; 
-  font-size: 1.2em;
-  text-align: center; 
-  padding: 20px; 
-  overflow-y: auto; 
-  border: 1px solid black; 
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: white; 
+  align-items: center;
+  background-color: white;
+  position: relative;
+  width: 90vw;
+  max-width: 1000px;
+  min-height: 25em;
+  border-radius: 0.6em;
+  margin: 0 auto 50px auto;
+  box-shadow: 0 1.8em 3em rgba(1, 17, 39, 0.15);
+  padding: 20px;
+}
+
+.info-slider {
+  color: black;
+  font-size: 1.2em;
+  text-align: center;
+  padding: 20px;
+  overflow-y: auto;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
 }
 
 .wrapper button {
@@ -360,38 +365,34 @@ html {
   bottom: 0;
   border: none;
   color: #0a69ed;
-  box-shadow: 0 0 1em rgba(1,17,39,0.25);
+  box-shadow: 0 0 1em rgba(1, 17, 39, 0.25);
   cursor: pointer;
   border-radius: 50%;
 }
 
 button#next {
-position: absolute;
-right: 20px;
-bottom: 20px;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
 }
 
-button#prev{
-position: absolute;
-left: 20px;
-bottom: 20px;
+button#prev {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
 }
 
 @media (max-width: 768px) {
   .wrapper {
-    width: 95%; 
+    width: 95%;
     padding: 10px;
   }
 
   .info-slider {
-    width: 100%; 
+    width: 100%;
   }
 }
 
-
-
 /*New Improved Slider*/
-
-
 
 /*about*/
