--- a/productspage/style.css
+++ b/productspage/style.css
@@ -245,10 +245,10 @@ body {
   align-items: center;
 }
 
-
-
-
 .searchsection {
+  display:flex;
+  flex-direction: row;
+  align-items:center;
   width: 500px;
   height: 100px;
   background: rgba(220, 220, 220, 0.5);
@@ -256,7 +256,6 @@ body {
   border-radius: 50px;
   padding: 0 10px;
   box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.06);
-  padding: 25px;
 }
 
 .searchsection img {
@@ -275,11 +274,29 @@ body {
   backdrop-filter: blur(5px);
   border: none;
   border-radius: 50px;
+  outline:none;
 }
 
 .searchsection input::placeholder {
-  margin-left: 20px;
   color: black;
+}
+  
+
+.optionbox ul{
+  border-top:1px solid #999;
+  list-style-type: none;
+  padding:0 10px;
+}
+
+.optionbox ul li{
+  list-style-type: none;
+  border-radius: 15px;
+  padding:0 10px;
+  cursor:pointer;
+}
+
+.optionbox ul li:hover {
+  background: rgba(0, 0, 0, 0.1);
 }
 
 /* footer */
