--- a/productspage/style.css
+++ b/productspage/style.css
@@ -124,6 +124,9 @@ body {
 /* navbar */
 #navbar {
   background-color: #e5e7e9;
+  height:83px;
+  overflow:visible;
+
 }
 #logo {
   margin-left: 15px;
@@ -161,7 +164,6 @@ body {
   color: white;
   transition: 0.5s ease;
 }
-
 #search input {
   border-radius: 50px;
   border: none;
@@ -172,6 +174,7 @@ body {
   border: 1px solid #212f3d;
   background-color: #212f3d;
 }
+
 .cart-btn a i {
   padding-left: 10px;
   font-size: 20px;
