--- a/aboutuspage/aboutus.css
+++ b/aboutuspage/aboutus.css
@@ -147,7 +147,8 @@ body {
   color: white;
   font-size: 14px;
   background-color: #212f3d;
-  margin-top: 100px;
+  margin-top: 0px;
+  flex-shrink: 0;
 }
 #footer .footer-top {
   padding: 60px 0 30px 0;
@@ -295,11 +296,9 @@ html {
 
 #hero {
   flex-shrink: 0;
-  margin-bottom: 20px;
   position: relative;
   text-align: center;
   color: white;
-  margin-bottom: 50px;
 }
 .hero-bg img {
   width: 100%;
@@ -318,9 +317,6 @@ html {
 
 /*New Improved Slider*/
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
 
@@ -330,28 +326,25 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: #212f3d;
+  color: white;
   position: relative;
-  width: 90vw;
-  max-width: 1000px;
-  min-height: 25em;
-  border-radius: 0.6em;
-  margin: 0 auto 50px auto;
-  box-shadow: 0 1.8em 3em rgba(1, 17, 39, 0.15);
-  padding: 20px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 5px;
+  border-bottom: 1px solid black;
 }
 
 .info-slider {
-  color: black;
+  color: white;
+  background-color: #212f3d;
   font-size: 1.2em;
   text-align: center;
   padding: 20px;
   overflow-y: auto;
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: white;
+  width: 100%;
+  max-width: 1000px;
+  min-height: 50vh;
 }
 
 .wrapper button {
@@ -373,23 +366,35 @@ html {
 button#next {
   position: absolute;
   right: 20px;
-  bottom: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 button#prev {
   position: absolute;
   left: 20px;
-  bottom: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color:white;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+
 }
 
 @media (max-width: 768px) {
   .wrapper {
-    width: 95%;
-    padding: 10px;
+    width: 100%;
+    padding:10px;
   }
 
   .info-slider {
-    width: 100%;
+    font-size: 1em;
+    padding: 10px;
   }
 }
 
