changing search a href links to .php

--- a/productspage/style.css
+++ b/productspage/style.css
@@ -235,7 +235,7 @@ body {
   background: rgba(0, 0, 0, 0.1);
 }
 
-.searchsectionnav:focus-within .optionbox {
+.searchsectionnav:focus-within .optionboxnav {
   display: block;
 }
 
