search working in navbar, trying to make it work accross all navbars

--- a/productspage/style.css
+++ b/productspage/style.css
@@ -195,6 +195,8 @@ body {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
   overflow: hidden;
   transition: all 0.3s ease;
+  position: relative;
+  overflow: visible;
 }
 
 .searchsectionnav form {
@@ -229,10 +231,15 @@ body {
 .optionboxnav {
   display: none;
   max-height: 300px;
-  overflow-y: auto;
+  overflow-y: auto; 
   padding: 10px 0;
-  backdrop-filter: blur(10px);
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute; 
+  top: 100%; 
+  left: 0;
+  width: 100%; 
+  border-radius:20px;
+  z-index: 10; 
 }
 
 .searchsectionnav:focus-within .optionboxnav {
