--- a/contactuspage/style.css
+++ b/contactuspage/style.css
@@ -136,7 +136,13 @@ body {
   color: gray;
 }
 /* navbar */
-
+body {
+  background-image: url(../productspage/categoryimages/background.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
 /* footer */
 #footer {
   padding: 0 0 30px 0px;
