--- a/productspage/style.css
+++ b/productspage/style.css
@@ -181,6 +181,8 @@ body {
   display: flex;
   justify-content: center; 
   margin-right: 20px;
+  z-index: 10;
+  position:relative;
 }
 
 
@@ -233,13 +235,13 @@ body {
   max-height: 300px;
   overflow-y: auto; 
   padding: 10px 0;
-  background: rgba(0, 0, 0, 0.2);
+  background-color: white;
   position: absolute; 
   top: 100%; 
   left: 0;
   width: 100%; 
   border-radius:20px;
-  z-index: 10; 
+  z-index: 1000; 
 }
 
 .searchsectionnav:focus-within .optionboxnav {
@@ -260,21 +262,22 @@ body {
 
 .optionboxnav ul li:hover {
   background: rgba(255, 255, 255, 0.1);
+  text-decoration: black;
 }
 
 .optionboxnav a {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 .optionboxnav a:hover{
   text-decoration: none;
-  color: white;
+  color: black;
 }
 .optionboxnav p {
   text-align: center;
   margin: 0;
   padding: 10px;
-  color: white;
+  color: black;
   font-size: 14px;
 }
 
