added a welcome message when logged in

--- a/Landing-Page/assests/css/style.css
+++ b/Landing-Page/assests/css/style.css
@@ -588,6 +588,21 @@
 }
 /* footer */
 
+/* welcome noti*/
+.notification {
+  position: fixed;
+  top: 13%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 15px 30px;
+  background-color: grey;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+/* welcome noti*/
+
 html {
   scroll-behavior: smooth;
 }
